// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genFeatureTypes > should generate correct TypeScript output for browser 1`] = `
"
// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const features = [
  {
    key: "feature1", 
    access: true, 
    config: undefined
  }, 
  {
    key: "feature2", 
    access: false, 
    config: "string"
  }, 
  {
    key: "feature3", 
    access: true, 
    config: {
      aiModel: "string", 
      prompt: {
        text: "string", 
        cheekyFactor: "number"
      }
    }
  }
] as const;
"
`;

exports[`genFeatureTypes > should generate correct TypeScript output for react 1`] = `
"
// DO NOT EDIT THIS FILE. IT IS GENERATED BY THE BUCKET CLI AND WILL BE OVERWRITTEN.

export const features = [
  {
    key: "feature1", 
    access: true, 
    config: undefined
  }, 
  {
    key: "feature2", 
    access: false, 
    config: "string"
  }, 
  {
    key: "feature3", 
    access: true, 
    config: {
      aiModel: "string", 
      prompt: {
        text: "string", 
        cheekyFactor: "number"
      }
    }
  }
] as const;


declare module "@bucket/react-sdk" {
  feature1: {
    key: "feature1", 
    access: true, 
    config: undefined
  }, 
  feature2: {
    key: "feature2", 
    access: false, 
    config: string
  }, 
  feature3: {
    key: "feature3", 
    access: true, 
    config: {
      aiModel: string, 
      prompt: {
        text: string, 
        cheekyFactor: number
      }
    }
  }
}"
`;
